Added ID for AMO

--- a/manifest.json
+++ b/manifest.json
@@ -15,5 +15,10 @@
                 "ft-reader.js"
             ]
         }
-    ]
+    ],
+    "browser_specific_settings": {
+        "gecko": {
+            "id": "ft-reader@ture.dev"
+        }
+    }
 }
