--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
     "manifest_version": 3,
     "name": "FT-Reader",
-    "version": "0.0.1",
+    "version": "0.0.2",
     "description": "Allows you to read Financial Times without a subscription.",
     "icons": {
-        "48": "assets/icon.svg"
+        "48": "assets/icon.png"
     },
     "content_scripts": [
         {
